[package]
name = "actor-mux"
version = "0.1.0"
edition = "2021"

[features]
default = ["mock", "yamux"]
mock = []
yamux = []

[dependencies]
tlsn-utils-aio = { path = "../utils-aio" }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["time"] }
xtra = { workspace = true, features = [
    "macros",
    "tokio",
], default-features = false }
yamux = "0.10"

[dev-dependencies]
tokio-util = { workspace = true, features = ["compat"] }
tokio = { workspace = true, features = [
    "macros",
    "io-util",
    "rt",
    "rt-multi-thread",
] }
