[package]
name = "tlsn-aead"
version = "0.1.0"
edition = "2021"

[lib]
name = "aead"

[features]
default = ["mock"]
mock = []

[dependencies]
tlsn-block-cipher = { path = "../cipher/block-cipher" }
tlsn-stream-cipher = { path = "../cipher/stream-cipher" }
tlsn-universal-hash = { path = "../universal-hash" }
tlsn-mpc-circuits = { path = "../mpc/mpc-circuits" }
tlsn-mpc-core = { path = "../mpc/mpc-core" }
tlsn-mpc-garble = { path = "../mpc/garble/mpc-garble" }
tlsn-utils-aio = { path = "../utils/utils-aio" }
tlsn-mpc-share-conversion = { path = "../mpc/share-conversion/mpc-share-conversion" }

async-trait = "0.1"
derive_builder = "0.11"
thiserror = "1"
futures = "0.3"
rand = "0.8"
serde = "1.0"

[dev-dependencies]
tokio = "1.23"
aes-gcm = "0.10.1"
