[package]
name = "tlsn-aead"
authors = ["TLSNotary Team"]
description = "This crate provides an implementation of a two-party version of AES-GCM behind an AEAD trait"
keywords = ["tls", "mpc", "2pc", "aead", "aes", "aes-gcm"]
categories = ["cryptography"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[lib]
name = "aead"

[features]
default = ["mock"]
mock = []

[dependencies]
tlsn-block-cipher = { path = "../cipher/block-cipher" }
tlsn-stream-cipher = { path = "../cipher/stream-cipher" }
tlsn-universal-hash = { path = "../universal-hash" }
tlsn-mpc-core = { path = "../mpc/mpc-core" }
tlsn-mpc-garble = { path = "../mpc/garble/mpc-garble" }
tlsn-utils-aio = { path = "../utils/utils-aio" }

async-trait = "0.1"
derive_builder = "0.12"
thiserror = "1"
futures = "0.3"
serde = "1"

[dev-dependencies]
tokio = "1"
aes-gcm = "0.10"
