[package]
name = "authdecode"
version = "0.1.0"
edition = "2021"

[lib]
name = "authdecode"

[dependencies]
thiserror.workspace = true
num.workspace = true
rand.workspace = true
aes.workspace = true
cipher.workspace = true
rand_chacha.workspace = true
sha2 = { workspace = true, features = ["compress"] }

#dependencies for halo2
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20", default-features = false}
halo2_gadgets = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20"}
group = "0.13"
ff = "0.13"

[dev-dependencies]
hex.workspace = true
num-bigint = { workspace = true, features = ["rand"] }
criterion.workspace = true

[[bench]]
name = "halo2_proof_generation"
harness = false