[package]
name = "authdecode"
version = "0.1.0"
edition = "2021"

[lib]
name = "authdecode"

[dependencies]
# TODO bincode is only used for the mock backend
bincode = "1"
thiserror = "1.0.56"
num = "0.4.1" 
rand = "0.8.5"
rand_chacha = "0.3.1"
sha2 = { version = "0.10.8", features = ["compress"] }
opaque-debug = "0.3.0"
mpz-core = { git = "https://github.com/privacy-scaling-explorations/mpz", commit = "499b75d20397235f8399817a53c65fa2d399d3b8"}
blake3 = "1.3.3"
serde = "1"
tlsn-utils = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "8d8ffe1" }

halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v0.3.0", default-features = false}
halo2_poseidon = { git = "https://github.com/privacy-scaling-explorations/poseidon-gadget", rev="764a682"}

group = "0.13"
ff = "0.13"


[dev-dependencies]
hex = "0.4.3"
criterion = "0.5.1"
rand_chacha = "0.3"
rand = "0.8"
rand_core = "0.6"
rstest = "0.12"
tlsn-core = {path = "../tlsn/tlsn-core" }
bincode = "1"

