[workspace]
members = ["stream-cipher", "cipher-circuits"]

[workspace.dependencies]
# tlsn
tlsn-mpc-circuits = { path = "../mpc/mpc-circuits" }
tlsn-mpc-core = { path = "../mpc/mpc-core" }
tlsn-mpc-aio = { path = "../mpc/mpc-aio" }
tlsn-utils = { path = "../utils/utils" }
tlsn-utils-aio = { path = "../utils/utils-aio" }

# rand
rand_chacha = "0.3"
rand = "0.8"
rand_core = "0.6"

# crypto
aes = "0.8"
ctr = "0.9.2"
cipher = "0.4.3"

# async
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio = "1.23"
tokio-util = "0.7"

# testing
rstest = "0.16"
criterion = "0.3"

# serialization
prost = "0.9"

# error/log
thiserror = "1"

# misc
rayon = "1"
derive_builder = "0.11"
once_cell = "1"
generic-array = "0.14"
