[package]
name = "clmul"
version = "0.1.0"
rust-version = "1.56"
edition = "2021"

[dependencies]
cfg-if = "1"

[target.'cfg(any(target_arch = "aarch64", target_arch = "x86_64", target_arch = "x86"))'.dependencies]
cpufeatures = "0.2"

[dev-dependencies]
rand_chacha = "0.3.1"
rand = "0.8.5"
rand_core = "0.6.3"

[features]
armv8 = [] # Enable nightly-only ARMv8 intrinsics support
force-soft = [] # Disable support for hardware intrinsics