[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
tlsn-mpc-garble = { path = "../mpc/garble/mpc-garble" }
tlsn-mpc-share-conversion = { path = "../mpc/share-conversion/mpc-share-conversion" }
tlsn-block-cipher = { path = "../cipher/block-cipher" }
tlsn-stream-cipher = { path = "../cipher/stream-cipher" }
tlsn-universal-hash = { path = "../universal-hash" }
tlsn-aead = { path = "../aead" }
tlsn-key-exchange = { path = "../key-exchange" }
tlsn-point-addition = { path = "../point-addition" }
tlsn-hmac-sha256 = { path = "../prf/hmac-sha256" }
tlsn-utils-aio = { path = "../utils/utils-aio" }

actor-ot = { path = "../actors/actor-ot" }
uid-mux = { path = "../uid-mux" }

p256 = { version = "0.12" }

rand_chacha = "0.3"
rand = "0.8"

tokio = { version = "1.23", features = ["macros", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] }
