[package]
name = "tlsn-key-exchange"
version = "0.1.0"
edition = "2021"

[lib]
name = "key_exchange"

[features]
default = ["mock"]
mock = []

[dependencies]
mpz-garble-core = { git = "https://github.com/tlsnotary/mpz" }
mpz-garble = { git = "https://github.com/tlsnotary/mpz" }
mpz-core = { git = "https://github.com/tlsnotary/mpz" }
mpz-ot = { git = "https://github.com/tlsnotary/mpz" }
mpz-circuits = { git = "https://github.com/tlsnotary/mpz" }
tlsn-utils-aio = { git = "https://github.com/tlsnotary/tlsn-utils" }
mpz-share-conversion-core = { git = "https://github.com/tlsnotary/mpz" }
tlsn-point-addition = { path = "../point-addition" }
p256 = { version = "0.12", features = ["ecdh"] }
async-trait = "0.1"
thiserror = "1"
serde = { version = "1" }
futures = "0.3"
rand_chacha = "0.3"
rand_core = "0.6"
once_cell = "1"
derive_builder = "0.12"

[dev-dependencies]
tokio = { version = "1.23", features = ["macros", "rt", "rt-multi-thread"] }
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
