[package]
name = "matrix-transpose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"

[dev-dependencies]
rand = "0.8"
criterion = "0.3"

[features]
simd-transpose = []

[[bench]]
name = "transpose"
harness = false
