[package]
name = "tlsn-mpc-aio"
version = "0.1.0"
edition = "2021"

[lib]
name = "mpc_aio"

[features]
default = ["pa", "ot"]
ot = ["tlsn-mpc-core/ot", "tlsn-mpc-core/proto", "rand_chacha"]
pa = ["tlsn-mpc-core/pa", "tlsn-mpc-core/proto", "p256"]

[dependencies]
tlsn-mpc-core = { path = "../mpc-core", default-features = false }
tlsn-utils-aio = { path = "../utils-aio" }
async-trait = "0.1.53"
prost = "0.9"
futures = "0.3"
futures-util = "0.3"
cipher = "0.3"
rand = "0.8.5"
rand_core = "0.6.3"
rand_chacha = { version = "0.3", optional = true }
p256 = { version = "0.10.1", optional = true }
thiserror = "1.0"
tracing = "0.1"
tokio-util = { version = "0.7.1", features = ["codec"] }
tokio = { version = "1.17", features = [
    "net",
    "macros",
    "rt",
    "rt-multi-thread",
] }
mockall = "0.11.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"

[dev-dependencies]
async-tungstenite = { version = "0.16", features = ["tokio-runtime"] }
ws_stream_tungstenite = { version = "0.7.0", features = ["tokio_io"] }
yamux = "0.10.1"
tracing-subscriber = "0.3"
clap = { version = "3.1", features = ["derive"] }
