[package]
name = "tlsn-mpc-aio"
version = "0.1.0"
edition = "2021"

[lib]
name = "mpc_aio"

[features]
default = ["pa", "ot", "mock"]
ot = ["tlsn-mpc-core/ot", "tlsn-mpc-core/proto", "rand_chacha"]
pa = ["tlsn-mpc-core/pa", "tlsn-mpc-core/proto", "p256"]
mock = ["dep:aes"]

[dependencies]
tlsn-mpc-circuits = { path = "../mpc-circuits" }
tlsn-mpc-core = { path = "../mpc-core" }
tlsn-utils-aio = { path = "../utils-aio" }
async-trait.workspace = true
prost.workspace = true
futures.workspace = true
futures-util.workspace = true
cipher.workspace = true
rand.workspace = true
rand_core.workspace = true
rand_chacha = { workspace = true, optional = true }
p256 = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
tokio = { workspace = true, features = [
    "net",
    "macros",
    "rt",
    "rt-multi-thread",
] }
mockall.workspace = true
async-stream.workspace = true
aes = { workspace = true, optional = true }
rayon = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }
wasm-bindgen.workspace = true

[dev-dependencies]
async-tungstenite = { workspace = true, features = ["tokio-runtime"] }
ws_stream_tungstenite = { workspace = true, features = ["tokio_io"] }
yamux.workspace = true
tracing-subscriber.workspace = true
clap = { workspace = true, features = ["derive"] }
tokio-stream.workspace = true
tlsn-utils-aio = { path = "../utils-aio", features = ["duplex"] }
