[package]
name = "tlsn-mpc-aio"
version = "0.1.0"
edition = "2021"

[lib]
name = "mpc_aio"

[features]
default = ["ot", "mock"]
ot = ["tlsn-mpc-core/ot", "tlsn-mpc-core/proto", "rand_chacha"]
mock = ["dep:aes"]
pa = ["tlsn-mpc-core/pa"]

[dependencies]
tlsn-mpc-circuits = { path = "../mpc-circuits" }
tlsn-mpc-core = { path = "../mpc-core" }
tlsn-utils-aio = { path = "../utils-aio" }
async-trait.workspace = true
prost.workspace = true
futures.workspace = true
futures-util.workspace = true
cipher.workspace = true
rand.workspace = true
rand_core.workspace = true
rand_chacha = { workspace = true, optional = true }
p256 = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
tokio = { workspace = true, features = [
    "net",
    "macros",
    "rt",
    "rt-multi-thread",
] }
mockall = "0.11"
async-stream = "0.3"
aes = { workspace = true, optional = true }
rayon = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }
wasm-bindgen.workspace = true

[dev-dependencies]
async-tungstenite = { workspace = true, features = ["tokio-runtime"] }
ws_stream_tungstenite = { workspace = true, features = ["tokio_io"] }
yamux.workspace = true
tracing-subscriber.workspace = true
clap = { workspace = true, features = ["derive"] }
tokio-stream.workspace = true
tlsn-utils-aio = { path = "../utils-aio", features = ["duplex"] }
