[package]
name = "tlsn-mpc-circuits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tlsn-mpc-core = { path = "../mpc-core" }
regex = "1.5.4"
prost = "0.9"
rayon = "1.5"
clap = { version = "3.1.5", features = ["derive"] }

[[bin]]
name = "compile"
path = "src/compile.rs"
