[package]
name = "tlsn-mpc-circuits"
version = "0.1.0"
edition = "2021"

[features]
default = ["full"]
full = ["aes_128_reverse", "adder64"]
aes_128_reverse = []
adder64 = []

[dependencies]
thiserror = "1.0"
regex = "1.5.4"
prost = "0.9"
rayon = "1.5"
clap = { version = "3.1.5", features = ["derive"] }
sha2 = { version = "0.10" }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.10"
lazy_static = "1.4.0"

[dev-dependencies]
aes = { version = "0.7.5" }
rand = "0.8.5"

[build-dependencies]
prost-build = { version = "0.9" }

[lib]
name = "mpc_circuits"
path = "src/lib.rs"

[[bin]]
name = "compile"
path = "src/bin/compile.rs"
